manifests.yaml
---
# Source: onechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gimletd
  namespace: default
  labels:
    helm.sh/chart: onechart-0.32.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gimletd
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
      protocol: TCP
      name: http
    
  selector:
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gimletd
---
# Source: onechart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gimletd
  namespace: default
  labels:
    helm.sh/chart: onechart-0.32.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gimletd
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: gimletd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: eaa981b54f99888c995b32ebc56e17f13eb97c26311ab975d73c139c560767e1
      labels:
        app.kubernetes.io/name: onechart
        app.kubernetes.io/instance: gimletd
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: gimletd
          securityContext: &securityContext
            {}
          image: "ghcr.io/gimlet-io/gimletd:latest"
          imagePullPolicy: Always
          
          envFrom: &envFrom
            - configMapRef:
                name: gimletd
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            
          readinessProbe:
            httpGet:
              path: /
              port: 8888
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          
          volumeMounts: &volumeMounts
            - name: data
              mountPath: /var/lib/gimletd
            - name: repo-cache
              mountPath: /tmp/gimletd
            - name: github-gitops-deploy-key
              mountPath: /dzsak
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 200Mi
      
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gimletd-data
        - name: repo-cache
          persistentVolumeClaim:
            claimName: gimletd-repo-cache
        - name: github-gitops-deploy-key
          secret:
            secretName: gimletd-github-gitops-deploy-key
---
# Source: onechart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gimletd
  namespace: default
  labels:
    helm.sh/chart: onechart-0.32.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gimletd
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "gimletd.mycompany.com"
      secretName: tls-gimletd
  rules:
    - host: "gimletd.mycompany.com"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: gimletd
                port:
                  number: 8888
